--- a/scss/block/_contacts.scss
+++ b/scss/block/_contacts.scss
@@ -106,7 +106,6 @@
         margin-top: 200px;
         position: relative;
         overflow: hidden;
-        margin-bottom: 60px;
         z-index: 0;
 
         &__heading {
@@ -131,6 +130,7 @@
         width: 100%;
         height: 100%;
         border: none;
+
         
         &::before{
             content: url(./../../img/location-info-mob.png);
